--- a/css trials.css
+++ b/css trials.css
@@ -6,15 +6,31 @@ body {
     margin: 0;
 }
              
-    #black{
-        background-color: black; }
-    
+
+     #black{
+        background-color: black;
+         }
+
 
     .box {   
         display: inline-block;
         height:100px;
         width:100px;
         margin-right: 50px;
+        margin-top: 50px;
+        margin-bottom: 150px;
+        margin-left: 20px;
         
 }
 
+    #red{
+        background-color: red;
+        height: 200px;
+        width:350px;
+         }
+    
+    #blue{
+        background-color: blue;
+        height: 200px;
+        width:350px;
+         }
